--- a/share.html
+++ b/share.html
@@ -4,14 +4,10 @@
     </head>
  <body>
         <h1>Share</h1>
-      !--
-// This feature is available only in secure contexts (HTTPS), in some or all supporting browsers.
-// Chrome for Android
--->>
-        <pre id="log" style="width:100%;height:200px"></pre>
-      
-      <button type="button" id="button">Share</button>
-      
+< !-- This feature is available only in secure contexts (HTTPS), in some or all supporting browsers. Chrome for Android
+-->
+       <button type="button" id="button">Share</button>
+      <pre id="log" style="width:100%;height:200px"></pre>
         <script type="text/javascript">
         function log(logstr) {   
             document.getElementById("log").innerHTML +=logstr+"\n";
