--- a/genhtml/genhtml.html
+++ b/genhtml/genhtml.html
@@ -10,13 +10,14 @@ div {
 <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
-<script src="https://unpkg.com/ipfs-http-client/dist/index.min.js"></script>
+<script src="../lib/index.min.js"></script>  <!-- https://unpkg.com/ipfs-http-client/dist/index.min.js -->
 <script type="module" src="./genhtml.mjs"></script>
 
 </head>
 <body>
 
 <h2>Convertor of Figma pages</h2>
+<button id="ClearCache" >ClearCache</button>
 Enter figmakey, pageid and start object below:<br>
 <pre>
 figmakey:   <span id="figmakey"   style="background-color:yellow;border-style: solid;border-width: 1px; ">...</span>
@@ -34,6 +35,7 @@ images:     <span id="images"></span>
 <pre id="output"></pre>
 <button id="SaveOnIpfs" ></button>
 <button id="AlsoInject" ></button>
+
 <div id="inject"></div>
 
 <script>
@@ -42,7 +44,7 @@ console.log("In onerror");
     var str=`Error: ${message} ${source}, ${lineno}, ${colno}  `;
     if (error && error.stack) str = str.concat('\n').concat(error.stack);    
     console.log(str);    
-    getElement("log").innerHTML=str;    
+    document.getElementById("log").innerHTML=str;    
 } 
 </script>
 
