--- a/genhtml/genhtml.html
+++ b/genhtml/genhtml.html
@@ -18,6 +18,7 @@ div {
 
 <h2>Convertor of Figma pages</h2>
 <button id="ClearCache" >ClearCache</button>
+<pre id="log" style="height:200px;overflow: scroll;width:50%;float:left"></pre>
 Enter figmakey, pageid and start object below:<br>
 <pre>
 figmakey:   <span id="figmakey"   style="background-color:yellow;border-style: solid;border-width: 1px; ">...</span>
@@ -31,7 +32,7 @@ images:     <span id="images"></span>
 </pre>
 
 <!--button onclick="start()">Start</button-->
-<pre id="log" style="height:200px;overflow: scroll;"></pre>
+
 <pre id="output"></pre>
 <button id="SaveOnIpfs" ></button>
 <button id="AlsoInject" ></button>
