--- a/genhtml/genhtml.html
+++ b/genhtml/genhtml.html
@@ -36,7 +36,7 @@ images:     <span id="images"></span>
 <pre id="output"></pre>
 <button id="SaveOnIpfs" ></button>
 <button id="AlsoInject" ></button>
-
+<button id="Reload" >Reload</button>
 <div id="inject"></div>
 
 <script>
