--- a/viewer_figma/newviewer.html
+++ b/viewer_figma/newviewer.html
@@ -1,3 +1,13 @@
 <script>
-   location.href = 'https://ipfs.io/ipfs/QmQ94QQrYY98igNwcktK8jfvSCDEMtRgTwgSkCySiNhTVG';
+    let url = new URL(document.location)
+    url.host="ipfs.io"
+    url.pathname="/ipfs/QmbWRaKQm7pKrmbbEnsAxBqs9vn6RJEyiHKS8JkxFj1Eki";
+    if (!url.searchParams.get('orghostname'))  url.searchParams.append('orghostname', url.hostname);       
+    if (!url.searchParams.get('orgpathname'))  url.searchParams.append('orgpathname', url.pathname);        
+    console.log(location.href)
+    console.log(url)
+    
+    var dest=url.toString()
+    console.log(dest)
+    location.href = dest;
 </script>
