--- a/genhtml/genhtml.html
+++ b/genhtml/genhtml.html
@@ -29,6 +29,7 @@ embed:      <span id="embed"      style="background-color:yellow;border-style: s
 pin:        <span id="pin"        style="background-color:yellow;border-style: solid;border-width: 1px; ">https://ipfs.infura.io:5001</span>  (https://ipfs.infura.io:5001)
 retry:      <span id="retry"></span>
 images:     <span id="images"></span>
+ipfs:       <span id="ipfs"></span>
 </pre>
 
 <!--button onclick="start()">Start</button-->
